--- a/src/main/webapp/bootstrap/bootstrap.css
+++ b/src/main/webapp/bootstrap/bootstrap.css
@@ -5852,7 +5852,7 @@ button.close {
   cursor: pointer;
   background-color: #000 \9;
   background-color: rgba(0, 0, 0, 0);
-  border: 1px solid #fff;
+  /*border: 1px solid #fff;*/
   border-radius: 10px;
 }
 .carousel-indicators .active {
